customizes tmux keys and visual styling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,41 @@
-# start numbering at 1
 set -g base-index 1
 setw -g pane-base-index 1
+
+set -g prefix C-a
+unbind C-b
+
+bind r source-file ~/.tmux.conf \; display "Realoaded!"
+
+bind | split-window -h
+bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+set -g default-terminal "screen-256color"
+
+set -g status-fg white
+set -g status-bg black
+
+setw -g window-status-fg cyan
+setw -g window-status-bg red
+setw -g window-status-attr bright
+
+set -g pane-border-fg green
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+setw -g monitor-activity on
+set -g visual-activity on
